# songsongsong

./: .dockerignore  .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  extraction_result.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.py  public  render.yaml  replit.md
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--1-2-1-1000--1773878431852_1773878431852.txt  Pasted--AI-AI--1775030554703_1775030554703.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774977813800.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774977926904.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774978052733.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774978306232.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774978790792.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774979791144.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774979928912.txt  Pasted--DOCTYPE-html-html-lang-zh-CN-head-meta-charset-UTF-8-m_1774980097173.txt  Pasted--Web3-Release-Web3-Release-Web3-the-all-in-one-17742064_1774206428829.txt  Pasted--Web3-Release-Whitepaper-Version-1-0-Date-March-22-2026_1774201957805.txt  Pasted-You-are-a-Web3-Release-professional-assistant-dedicated_1774628639829.txt  网站代码_1773875182202.txt
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  fetch_url.py  main.py  prompt.py
docker/: frontend.nginx.conf
tools/: prompt.py  (+2 more)
(+110 files in other folders)
